crates/plotnik-tests/tests/06-vm/definitions/ref_shared_by_same_shape_alternatives.txt
Inner = (identifier)

Q = (program
  [
    A: (expression_statement
      (Inner) @x
    )
    B: (labeled_statement
      body: (expression_statement
        (Inner) @y
      )
    )
  ] @item
)
--------------------- INPUT ----------------------
x
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(Inner)` because `Inner` produces no result value
 --> query.ptk:6:7
  |
1 | Inner = (identifier)
  | -------------------- `Inner` is defined here
...
6 |       (Inner) @x
  |       ^^^^^^^
  |
help: make `Inner` produce a result by changing `(identifier)` to `(identifier) @x_value` in definition `Inner`
help: or remove `@x` and capture a node pattern directly

error: `@y` cannot capture `(Inner)` because `Inner` produces no result value
  --> query.ptk:10:9
   |
 1 | Inner = (identifier)
   | -------------------- `Inner` is defined here
...
10 |         (Inner) @y
   |         ^^^^^^^
   |
help: make `Inner` produce a result by changing `(identifier)` to `(identifier) @y_value` in definition `Inner`
help: or remove `@y` and capture a node pattern directly
